# supremacy

./: .travis.yml  AUTHORS  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: FindGLEW.cmake  FindGMock.cmake  FindGTest.cmake  FindLibwish.cmake  FindPNG.cmake  FindSDL2.cmake  FindZLIB.cmake
data/: Info.plist  Supremacy.icns
data/biome/: desert.sup  forest.sup  glacier.sup  greenland.sup  mountain.sup  none.sup  ocean.sup  polar_desert.sup  swamp.sup  taiga.sup  tundra.sup
data/item/: dirt.sup  ice.sup  log.sup  none.sup  rock.sup
data/material/: air.sup  dirt.sup  grass.sup  ice.sup  rock.sup  sand.sup  snow.sup  wood.sup
data/shaders/opengl/3.2/: shader.frag.glsl  shader.vert.glsl
data/task/: mine.sup  smooth.sup  staircase.sup
data/task_terrain/: cut.sup  staircase.sup
data/tile/: block.sup  ground.sup  nothing.sup  slope.sup  stairs.sup  tree.sup
include/: action_id.h  actor_data.h  actor_id.h  actors.h  archive.h  biome.h  cli_options.h  draw.h  draw_buffer.h  fps_counter.h  game.h  game_state.h  glyph.h  init.h  item_data.h  item_id.h  items.h  keyboard.h  log.h  map.h  material.h  memory_file.h  noise.h  non_copyable.h  opengl.h  path.h  path_finder.h  rect3.h  renderer.h  scene.h  selection.h  serialize.h  sup_file.h  task.h  thread_pool.h  tile.h  tile_id.h  types.h  ui_state.h  update.h  (+5 more)
include/alloc/: allocator.h  memory.h
include/core/: file_system.h  os.h  types.h
include/engine/: game.h  game_engine.h  game_scene.h  input.h  input_event.h
include/game/: ai_system.h  physics.h  task.h
include/game/resource/: task_terrain_data.h
include/math/: algebra.h  algorithm.h  bitwise.h  linear.h  range.h  rect.h  rng.h  vector.h
include/rendering/: renderer.h  renderer_opengl_legacy.h  renderer_opengl_shader.h  renderer_vulkan.h
include/scene/: embark_scene.h  ingame_scene.h  load_world_selection_scene.h  main_menu_scene.h  worldmap_generation_scene.h
include/std/: algorithm.h  array.h  array_iterator.h  base_array.h  bit_array.h  fixed_array.h  pair.h  reverse_iterator.h  sparse_array.h  static_array.h
include/ui/: game_menu.h
include/util/: file_path.h  png.h  save_helper.h
include/window/: cocoa.h  sdl2.h  win32.h  win32_opengl.h  win32_vulkan.h  window.h
src/: CMakeLists.txt  action_id.h  actor_data.cpp  actor_data.h  actor_id.h  actors.cpp  actors.h  ai.cpp  archive.cpp  biome.cpp  cli_options.cpp  color.h  config.h.in  draw.cpp  draw_buffer.cpp  event.cpp  fps_counter.cpp  fps_counter.h  game.cpp  game.h  game_core.h  game_state.cpp  image.cpp  image.h  init.cpp  item_data.cpp  item_data.h  item_id.h  items.cpp  keyboard.cpp  keyboard.h  log.cpp  loop.cpp  main.cpp  map.cpp  map.h  map_action.h  map_generator.cpp  material.cpp  material.h  (+34 more)
src/core/: file_system.cpp  file_system_UNIX.cpp  file_system_Win32.cpp
src/draw/: draw_worldmap.cpp
src/engine/: game.cpp  game_engine.cpp  game_scene.cpp  input.cpp
src/game/: ai_system.cpp  physics.cpp
src/game/resource/: task_terrain_data.cpp
src/rendering/: renderer.cpp  renderer_opengl_legacy.cpp  renderer_opengl_shader.cpp  renderer_vulkan.cpp
src/scene/: embark_scene.cpp  ingame_scene.cpp  load_world_selection_scene.cpp  main_menu_scene.cpp  worldmap_generation_scene.cpp
src/serialize/: actors.cpp  items.cpp  map.cpp  world.cpp
src/util/: file_path.cpp  file_path_UNIX.cpp  file_path_Win32.cpp  png.cpp  save_helper.cpp
src/window/: cocoa.mm  sdl2.cpp  win32.cpp  win32_opengl.cpp  win32_vulkan.cpp  window.cpp
test/: CMakeLists.txt  main.cpp
test/math/: algebra_test.cpp  bitwise_test.cpp
util/: clean_save_data  mkdata
util/lib/: archiver.rb  data_builder.rb  serializer.rb  sup_file.rb  sup_helper.rb
util/lib/serializers/: biome_serializer.rb  item_serializer.rb  material_serializer.rb  task_serializer.rb  task_terrain_serializer.rb  tile_serializer.rb
